jsonschemadsl2ecore.trafo.opt/test/test30/invalidtests/example6.test30
{
	 
	"number":"11.33",
	"string":"some string",
	"object":{},
	"extra":"extra"
}